@@ -1,3 +1,7 @@
+2004-08-30  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b139
+
+	* Fix: Remove PHP Warnings in view_album, Fixes SF Bug #1018848.
+
 2004-08-29  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b138
 
 	* Fix: Always use the correct functions and import your globals
